Bug 142833 - observing list wizard is extremely slow
Summary: observing list wizard is extremely slow
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Akarsh Simha
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-11 14:57 UTC by Olivier Vitrat
Modified: 2009-01-10 20:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Improve usability by making it optional to update the object count (5.21 KB, patch)
2008-12-18 18:51 UTC, Akarsh Simha
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Vitrat 2007-03-11 14:57:52 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Debian testing/unstable Packages

This has been reported to Debian BTS at http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=404583


The observing list wizard is too slow to be usable.  

To reproduce, one can launch the wizard

  menu Tools->Observing List...
  magic wand button
  
To witness the slowness one can then do 

  Deep-Sky button
  pick a. In Constellation from the Filter list
  check Select objects in constellation(s)
  click on a few constellation names

On an Athlon64 3000+ machine it takes more than a minute for kstars to 
respond after any item is clicked.  No hour-glass cursor or anything and the 
window stop redrawing when obstructed.
Comment 1 kstars 2007-03-18 05:07:24 UTC
Confirmed in KDE4 versin as well.  I'll need to figure out a way to keep the GUI responsive and let the user know that progress is being made.
Comment 2 Akarsh Simha 2008-12-16 22:40:40 UTC
I've identified the problem. We are making a call to a rather expensive function several thousand times, unnecessarily.
Will try to fix it shortly.
Comment 3 Akarsh Simha 2008-12-18 18:51:04 UTC
Created attachment 29418 [details]
Improve usability by making it optional to update the object count

The patch avoids updating the object count every time it changes, but instead provides an "Update Count" button and updates the count only when the button is clicked.
Comment 4 Akarsh Simha 2008-12-18 23:59:49 UTC
There seems to be no clean way of speeding up the algorithm in all contexts. It should be possible, but I think it will require a lot of coding effort and time. 

The patch I attached earlier works around the problem by instead making it the user's option to update the count of objects.

However, we can't commit this patch now because it'll break the translated-string freeze, so it won't be fixed in KDE 4.2. Will commit it after the freeze is lifted.
Comment 5 Akarsh Simha 2009-01-10 20:12:13 UTC
SVN commit 909005 by asimha:

Improve usability of the Observing List Wizard by making the count
update optional.

BUG: 142833
CCMAIL: kstars-devel@kde.org



 M  +24 -12    obslistwizard.cpp  
 M  +1 -0      obslistwizard.h  
 M  +15 -0     obslistwizard.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=909005