Improve usability of the Observing List Wizard by making the count update optional.

BUG: 142833
CCMAIL: kstars-devel@kde.org


svn path=/trunk/KDE/kdeedu/kstars/; revision=909005